list ingredients no-wrap bug-fix

--- a/app/assets/stylesheets/components/_cocktail_list.scss
+++ b/app/assets/stylesheets/components/_cocktail_list.scss
@@ -41,6 +41,8 @@
   opacity: .9;
   margin-bottom: 0;
   transition: 0.3s;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .card_product:hover p {
   font-size: 15px;
